Isabelle2017 yet (using the "isabelle imports" tool).

* Command 'external_file' declares the formal dependency on the given
file name, such that the Isabelle build process knows about it, but
without specific Prover IDE management.

* Session ROOT entries no longer allow specification of 'files'. Rare
INCOMPATIBILITY, use command 'external_file' within a proper theory
context.


*** HOL ***

* SMT module:
  - The 'smt_oracle' option is now necessary when using the 'smt' method
    with a solver other than Z3. INCOMPATIBILITY.
  - The encoding to first-order logic is now more complete in the presence of
    higher-order quantifiers. An 'smt_explicit_application' option has been
    added to control this. INCOMPATIBILITY.


*** System ***

* Windows and Cygwin is for x86_64 only. Old 32bit platform support has
been discontinued.

* Command-line tool "isabelle build" supports new options:
  - option -B NAME: include session NAME and all descendants
  - option -S: only observe changes of sources, not heap images


New in Isabelle2017 (October 2017)
----------------------------------

*** General ***

* Experimental support for Visual Studio Code (VSCode) as alternative
Isabelle/PIDE front-end, see also
https://marketplace.visualstudio.com/items?itemName=makarius.Isabelle2017

VSCode is a new type of application that continues the concepts of
"programmer's editor" and "integrated development environment" towards
fully semantic editing and debugging -- in a relatively light-weight
manner. Thus it fits nicely on top of the Isabelle/PIDE infrastructure.
Technically, VSCode is based on the Electron application framework
(Node.js + Chromium browser + V8), which is implemented in JavaScript
and TypeScript, while Isabelle/VSCode mainly consists of Isabelle/Scala
modules around a Language Server implementation.

* Theory names are qualified by the session name that they belong to.
This affects imports, but not the theory name space prefix (which is