@@ -22,6 +22,13 @@ without specific Prover IDE management.
 INCOMPATIBILITY, use command 'external_file' within a proper theory
 context.
 
+* Session root directories may be specified multiple times: each
+accessible ROOT file is processed only once. This facilitates
+specification of $ISABELLE_HOME_USER/ROOTS or command-line options like
+-d or -D for "isabelle build" and "isabelle jedit". Example:
+
+  isabelle build -D '~~/src/ZF'
+
 
 *** HOL ***
 
